--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-
 .page-title {
         /* SHORTHAND MARGENS*/    
         margin: 40px auto 5px;
@@ -21,6 +20,16 @@ h2 {
         color: #8E3200;   
     }    
 
+
+    article{
+    width: 80%;
+    margin: 40px 0 5px;
+    }
+
+    p{
+        margin-top: 20px;
+    }
+
 main{
     width: 80%;
     margin: 40px auto 5px;
@@ -32,4 +41,17 @@ main{
     margin: 40px auto 5px;    
     font-size: 22pt;    
     color: #8E3200;       
+}
+
+.titulo-produto {
+    /* SHORTHAND MARGENS*/    
+    margin: 40px 0 5px;    
+    font-size: 18pt;
+    font-weight: bold;    
+    color: #ffffff;
+    background-color: #8E3200;
+}
+
+.imagem-produto{
+    width: 370px;
 }
